# python3-libvirt_lxc_helper

./: README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
examples/nginx/: README.md
examples/nginx/docker/: Dockerfile
examples/nginx/docker/files/: .p5.libvirt_lxc_helper.script.yml
src/_actions/: __init__.py
src/_actions/install_rootfs/: _installer.py
src/_actions/install_rootfs/_id_map/: _class.py
src/_actions/make_rootfs/: _logic.py  _script_processor.py
src/_actions/make_rootfs/_oci_image/: _fake.py  _size_guarantee.py
src/_actions/make_rootfs/_oci_image/bundle/: __init__.py  _class.py  _layer_reader.py
src/_common/: __init__.py  context_manipulator.py  path.py
src/_common/asynchronous_tools/: __init__.py  thread_pool.py
src/_common/module_helpers/: __init__.py
src/_common/tar/: __init__.py  _stream_inspector.py  reader.py
src/_entry_point/: __init__.py
src/p5/libvirt_lxc_helper/: __init__.py  __main__.py
src/p5/libvirt_lxc_helper/_actions/: __init__.py
src/p5/libvirt_lxc_helper/_actions/install_rootfs/: __init__.py  _class.py  _connection.py  _installer.py  _logic.py
src/p5/libvirt_lxc_helper/_actions/make_rootfs/: __init__.py  _class.py  _logic.py  _script_processor.py  _temporary_directory.py
src/p5/libvirt_lxc_helper/_common/: __init__.py  action.py  asynchronizer.py  cli_validator.py  context_manipulator.py  platform_info.py
src/p5/libvirt_lxc_helper/_entry_point/: __init__.py  _any_key_waiter.py  _cli_parser.py  _routine.py
tests/: conftest.py
tests/examples/nginx/: entry-point_test.py
(+22 files in other folders)
